# cmake-target-link-libraries-example

./: LICENSE  README.md
dpndnc/: CMakeLists.txt
dpndnc/cmake/: Installing.cmake
dpndnc/include/Thingy/: thingy.h
dpndnc/src/: stuff.h  thingy.cpp
prjct/: CMakeLists.txt
prjct/cmake/: Installing.cmake
prjct/libraries/: CMakeLists.txt
prjct/libraries/AnotherLibrary/: CMakeLists.txt  Config.cmake.in
prjct/libraries/AnotherLibrary/include/: another.h
prjct/libraries/AnotherLibrary/include/Another/: another.h
prjct/libraries/AnotherLibrary/src/: another.cpp  stuff.h
prjct/libraries/SomeLibrary/: CMakeLists.txt
prjct/libraries/SomeLibrary/include/: some.h
prjct/libraries/SomeLibrary/include/Some/: some.h
prjct/libraries/SomeLibrary/src/: some.cpp  stuff.h
tl/: CMakeLists.txt
tl/cmake/: Installing.cmake
tl/src/: main.cpp
